fixes max width overflow on previouswork

--- a/styles/_previous-work.scss
+++ b/styles/_previous-work.scss
@@ -40,8 +40,8 @@ $previouswork-tip-color: #777;
 }
 
 .item img {
-  max-width: 400px;
-  min-width: 400px;
+  max-width: 360px;
+  min-width: 360px;
   max-height: 350px;
   min-height: 350px;
 
